--- a/block-template-parts/footer.html
+++ b/block-template-parts/footer.html
@@ -26,7 +26,7 @@
 <!-- /wp:social-links -->
 
 <!-- wp:paragraph {"align":"center","style":{"elements":{"link":{"color":{"text":"var:preset|color|text-light"}}}},"textColor":"text-light","className":"mb-1 wp2-copyright","fontSize":"tiny"} -->
-<p class="has-text-align-center mb-1 wp2-copyright has-text-light-color has-text-color has-link-color has-tiny-font-size">©2021 wp2, Made by <a href="https://deothemes.com">DeoThemes</a></p>
+<p class="has-text-align-center mb-1 wp2-copyright has-text-light-color has-text-color has-link-color has-tiny-font-size">©2021 wp2, Made by <a href="https://6clicks.ch">JRN 6clicks</a></p>
 <!-- /wp:paragraph -->
 
 <!-- wp:navigation {"textColor":"text-light","itemsJustification":"center","style":{"spacing":{"blockGap":"20px"}},"fontSize":"tiny"} -->
